--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,37 @@
 #
 # application.yml — главный конфигурационный файл Spring Boot.
 
-Что нужно сделать:
-  - Указать настройки подключения к базе данных.
-  - Указать порт приложения.
-  - Настроить параметры безопасности и JWT.
-  - Включить Swagger UI.
+spring:
+  profiles:
+    active: development
+---
+spring:
+  config:
+    activate:
+      on-profile: development
+  application:
+    name: bank-rest
+  datasource:
+    url: jdbc:postgresql://localhost:5432/bankrest_db
+    username: postgres
+    password: postgres
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        show_sql: true
+  auth:
+    jwt:
+      access: bankrest
+      refresh: bankrest
+  card-number:
+    encryption:
+      secret: bankrestcardcard
+
+
+
+#Что нужно сделать:
+#  - Указать настройки подключения к базе данных.
+#  - Указать порт приложения.
+#  - Настроить параметры безопасности и JWT.
+#  - Включить Swagger UI.
