--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,10 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         show_sql: true
 
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/migration/changelog/db.changelog-master.yaml
+
   auth:
     jwt:
       access: bankrest
